# r_htslib

./: Cargo.toml  README.md
src/: faidx.rs  hts.rs  kstring.rs  lib.rs  malloc_data_block.rs  regidx.rs  sam.rs  tbx.rs  vcf.rs
src/hts/: lib.rs
src/sam/: lib.rs
src/vcf/: lib.rs
