[package]
name = "r_htslib"
version = "0.10.1"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
c2rust-bitfields = "0.3.0"
regex = "~1.5"
lazy_static = "~1.4"
