[package]
name = "r_htslib"
version = "0.12.0"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "~0.2"
c2rust-bitfields = "~0.3"
regex = "~1.5"
lazy_static = "~1.4"
